--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/three": "^0.152.1",
+    "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.3.2",
     "three": "^0.154.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -44,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
