--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-three/fiber": "^8.13.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,11 +15,16 @@
     "@types/react-dom": "^18.2.6",
     "@types/three": "^0.152.1",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "cross-env": "^7.0.3",
+    "i18next": "^23.2.7",
     "nth-check": "^2.0.1",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.1",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.1",
     "tailwindcss": "^3.3.2",
     "three": "^0.154.0",
     "typescript": "^4.9.5",
