--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "cross-env": "^7.0.3",
+    "history": "^5.3.0",
     "i18next": "^23.2.7",
     "nth-check": "^2.0.1",
     "postcss": "^8.4.24",
