--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "cSpell.language": "en,tr",
-  "cSpell.words": ["languagedetector", "reduxjs"]
+  "cSpell.words": ["languagedetector", "reduxjs", "toastify"]
 }
