--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.2",
     "three": "^0.154.0",
     "typescript": "^4.9.5",
