--- a/package.json
+++ b/package.json
@@ -9,22 +9,25 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/axios": "^0.14.0",
+    "@types/i18next": "^13.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-i18next": "^8.1.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.152.1",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "cross-env": "^7.0.3",
     "history": "^5.3.0",
-    "i18next": "^23.2.7",
+    "i18next": "^23.4.4",
+    "i18next-xhr-backend": "^3.2.2",
     "nth-check": "^2.0.1",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.0.1",
+    "react-i18next": "^13.1.2",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
