first model asset loading made

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "jsx": "react-jsx",
     "baseUrl": "."
   },
-  "include": ["src", "**/*.ts", "**/*.tsx"],
+  "include": ["src", "**/*.ts", "**/*.tsx", "three"],
   "exclude": ["node_modules"]
 }
