--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.80.9",
     "@react-three/fiber": "^8.13.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,7 +12,6 @@
     "@types/axios": "^0.14.0",
     "@types/i18next": "^13.0.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.38",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/react-i18next": "^8.1.0",
@@ -62,6 +62,12 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^20.5.7",
     "react-scripts": "^5.0.1"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
